--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,11 +29,11 @@ sms.requests.topic=gk.sms.requests
 failed.sms.requests.topic=gk.failed.sms.requests
 
 #kannel.base.url= cgi-bin/sendsms
-kannel.base.url=https://webhook.site/ead99849-9a02-4379-b057-0f2f77ed13a4
+kannel.base.url=https://webhook.site/93c35b2b-4126-486c-a05f-5012618cc347
 kannel.username=playsms
 kannel.password=sendpwdnotreal
 
-spring.datasource.url=jdbc:mysql://localhost:3306/message_db?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/message_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rootpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
