--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,7 @@ failed.sms.requests.topic=gk.failed.sms.requests
 kannel.base.url=https://webhook.site/93c35b2b-4126-486c-a05f-5012618cc347
 kannel.username=playsms
 kannel.password=sendpwdnotreal
+is.test=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/message_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
@@ -42,4 +43,16 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.sql.init.mode=always
 
-is.test=true
+# HikariCP Settings
+spring.datasource.hikari.pool-name=smsHikariPool
+spring.datasource.hikari.maximum-pool-size=100      # Increase based on your DB capacity
+spring.datasource.hikari.minimum-idle=30            # Keeps idle connections ready
+spring.datasource.hikari.idle-timeout=30000         # 30 seconds
+spring.datasource.hikari.connection-timeout=30000   # 30 seconds max wait to get a connection
+spring.datasource.hikari.max-lifetime=1800000       # 30 minutes before recycling a connection
+spring.datasource.hikari.validation-timeout=5000    # Timeout for connection validation
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.auto-commit=true
+
+# Optional - Leak Detection (debug only)
+# spring.datasource.hikari.leak-detection-threshold=2000
